fix menu gap

--- a/style.scss
+++ b/style.scss
@@ -420,8 +420,8 @@ h4 {
   #text {
     position: absolute;
     z-index: 2;
-    top: 5px;
-    left: 5px;
+    top: 0px;
+    left: 0px;
     background-color: rgba(255, 255, 255, 0.74);
     width: 100%;
     height: auto;
